# GBFR_SkillEditor

./: .gitignore  CMakeLists.txt  LICENSE  MainWindow.cpp  MainWindow.h  README.md  RecordParser.h  deploy.bat  main.cpp  style.qss
data/: skill_id_map.json  skill_status_back.tbl
